correct projector logo alignment and spacing in header

--- a/web/src/projector.css
+++ b/web/src/projector.css
@@ -49,10 +49,7 @@ body {
 
 #projector-logo-main {
   height: 50px;
-  padding-left: 50px;
-  padding-top: 10px;
-  float: left;
-  display: flex;
+  display: block;
 }
 
 #eventdata {
@@ -62,6 +59,8 @@ body {
   height: 50px;
   overflow: hidden;
   line-height: 1.1;
+  flex: 1;
+  padding-left: 50px;
 }
 
 #eventdata .event-name {
